samples/_failures_safe/1761318656_646d23_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4008a997.c: In function ‘main’:
./samples/SAFE/__tmp_4008a997.c:144:5: error: expected expression at end of input
  144 |     if (scanf(" %c", &choice) ==
      |     ^~
./samples/SAFE/__tmp_4008a997.c:144:5: error: expected declaration or statement at end of input
